Updated styling and uploaded new profile picture

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
 
   <div class="hero-image">
-    <img src="./images/IMG_8130.JPG" alt="Photo of Ansu V S, Web Developer" />
+    <img src="./images/2358454C-F8DB-48E5-B529-3DFD234C3438_1_201_a.jpeg" alt="Photo of Ansu V S, Web Developer" />
   </div>
 </section>
 
@@ -50,6 +50,11 @@
     <div class="project-card">
       <h4><a href="https://thenameisanzu.github.io/Portfolio-Website/">Portfolio Website</a></h4>
       <p>A personal portfolio site showcasing my skills, projects, and contact information. Built using HTML, CSS, and JavaScript with a clean and modern design.</p>
+    </div>
+
+    <div class="project-card">
+      <h4><a href="https://thenameisanzu.github.io/Calculator-App/">Calculator App</a></h4>
+      <p>A simple calculator app built with HTML, CSS, and JavaScript. Supports basic arithmetic operations with a responsive numpad UI.</p>
     </div>
   </div>
 </section>
