--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
     </div>
 
     <div class="project-card">
-      <h4><a href="https://thenameisanzu.github.io/Pomodoro-Timer/">Pomodoro Timer</a></h4>
+      <h4><a href="https://thenameisanzu.github.io/Pomodoro-Timer/" target="_blank">Pomodoro Timer</a></h4>
       <p>A simple and customizable Pomodoro Timer built with HTML, CSS, and JavaScript to help improve productivity and focus.</p>
     </div>
 
     <div class="project-card">
-      <h4><a href="https://thenameisanzu.github.io/Portfolio-Website/">Portfolio Website</a></h4>
+      <h4><a href="https://thenameisanzu.github.io/Portfolio-Website/" target="_blank">Portfolio Website</a></h4>
       <p>A personal portfolio site showcasing my skills, projects, and contact information. Built using HTML, CSS, and JavaScript with a clean and modern design.</p>
     </div>
 
     <div class="project-card">
-      <h4><a href="https://thenameisanzu.github.io/Calculator-App/">Calculator App</a></h4>
+      <h4><a href="https://thenameisanzu.github.io/Calculator-App/" target="_blank">Calculator App</a></h4>
       <p>A simple calculator app built with HTML, CSS, and JavaScript. Supports basic arithmetic operations with a responsive numpad UI.</p>
     </div>
   </div>
@@ -82,12 +82,21 @@
 
 </section>
 
-<section id="contact" class="contact-card">
+  <section id="contact" class="contact-card">
   <h2>Contact Me</h2>
   <div class="contact-container">
     <p><strong>Email:</strong> <a href="mailto:ansuvs047@gmail.com">ansuvs047@gmail.com</a></p>
+    <p>
+      <strong>GitHub:</strong> <a href="https://github.com/thenameisanzu" target="_blank" rel="noopener noreferrer">thenameisanzu</a> |
+      <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/ansu-v-s-03913b34a/" target="_blank" rel="noopener noreferrer">Ansu V S</a>
+    </p>
   </div>
 </section>
+
+
+<footer>
+  <p>© 2025 Ansu V S</p>
+</footer>
 
 
 </body>
